# Rustify

./: Cargo.toml  README.md
assets/: .gitkeep
src/: app.rs  config.rs  main.rs
src/audio/: engine.rs  mod.rs  stream.rs
src/core/: commands.rs  library.rs  mod.rs
src/plugins/: api.rs  host.rs  mod.rs
src/providers/: mod.rs  piped.rs  resolver.rs  spotify.rs
src/ui/: main_view.rs  mod.rs  player_bar.rs  sidebar.rs  theme.rs
